lists.cppresult.txt
In file included from cur.cpp:13:0:
uljshin/lists.cpp: In member function 'virtual T NewList<T>::get(int)':
uljshin/lists.cpp:139:11: error: '_default' was not declared in this scope
    return _default;
           ^
./check.sh: line 24: ./a.out: No such file or directory
